// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Component renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="test-dropdown"
    >
      Select an Option
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="w-full text-left bg-white text-gray-700 text-base px-3 py-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed"
      disabled=""
      id="test-dropdown"
      type="button"
    >
      Select an Option 
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropDown Component renders correctly with a label and placeholder value 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="test-dropdown"
    >
      Select an Option
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="w-full text-left bg-white text-gray-700 text-base px-3 py-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed"
      id="test-dropdown"
      type="button"
    >
      Select an Option 
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropDown Component renders correctly with a selected value 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="test-dropdown"
    >
      Select an Option
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="w-full text-left bg-white text-gray-700 text-base px-3 py-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed"
      id="test-dropdown"
      type="button"
    >
      Option 2 
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropDown Component renders with a description 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="test-dropdown"
    >
      Select an Option
    </label>
    <button
      aria-describedby="test-dropdown-description"
      aria-expanded="false"
      aria-haspopup="listbox"
      class="w-full text-left bg-white text-gray-700 text-base px-3 py-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary disabled:bg-gray-100 disabled:text-gray-500 disabled:cursor-not-allowed"
      id="test-dropdown"
      type="button"
    >
      Select an Option 
    </button>
    <p
      class="mt-2 text-sm text-gray-600"
      id="test-dropdown-description"
    >
      This is a helpful description.
    </p>
  </div>
</DocumentFragment>
`;
